# distil

./: .coverage  .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LAUNCH.md  LICENSE  Makefile  README.md  RELEASING.md  THREAT_MODEL.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  pages.yml  paper-build.yml  release.yml  scorecard.yml
.serena/: project.yml
benchmarks/: .gitignore  PROVE.md  README.md  baselines.py  codebench.py  derc_live_compare.py  e14_macros.py  fetch_real.py  gen_corpus.py  gen_realworld.py  headroom_adapter.py  prove.py  report_to_latex.py  rtk_adapter.py  skeleton_certificate.py  sweep_operating_point.py  trajectory_bound.py  trajectory_certificate.py
benchmarks/corpus_xl/: api-json-0.json  api-json-1.json  api-json-2.json  api-json-3.json  api-json-4.json  api-json-5.json  api-json-6.json  api-json-7.json  k8s-incident-0.json  k8s-incident-1.json  k8s-incident-2.json  k8s-incident-3.json  k8s-incident-4.json  k8s-incident-5.json  k8s-incident-6.json  k8s-incident-7.json  logs-0.json  logs-1.json  logs-2.json  logs-3.json  logs-4.json  logs-5.json  logs-6.json  logs-7.json  manifest.json  metrics-0.json  metrics-1.json  metrics-2.json  metrics-3.json  metrics-4.json  metrics-5.json  metrics-6.json  metrics-7.json  rag-synthesis-0.json  rag-synthesis-1.json  rag-synthesis-2.json  rag-synthesis-3.json  rag-synthesis-4.json  rag-synthesis-5.json  rag-synthesis-6.json  (+25 more)
benchmarks/fixtures/: make_fixtures.py  swe_bench_sample.json  tau_bench_sample.json
benchmarks/long_horizon/: __init__.py  agent.py  run.py  tools.py
benchmarks/swe_bench_e2e/: aggregate.py  compress_proxy.py  compress_proxy_openai.py  preload_images.py  run_agent.py  run_all_agents.sh  run_all_scores.sh  run_e2e_finalize.sh  sample.py  score.py  stats.py
corpus/: coding-bugfix.json  data-analysis-sql.json  devops-rollback.json  finance-reconcile.json  manifest.json  output_pairs.jsonl  research-synthesis.json  sample_trajectory.json  support-refund.json
distil/: __init__.py  _log.py  aproxy.py  astdelta.py  benchmark.py  cachedelta.py  calibrate.py  cli.py  conformal.py  corpus.py  correlate.py  delta.py  dissect.py  doctor.py  drift.py  ensemble.py  eval.py  expand.py  fidelity.py  gate.py  gateway.py  gist.py  hotswap.py  httpguard.py  ingest.py  learn.py  ledger.py  mcp_server.py  native.py  onboard.py  online.py  otel.py  output.py  perf.py  policy.py  pricing.py  proxy.py  retrieval.py  runtime.py  setup.py  (+7 more)
distil/adapters/: __init__.py  anthropic.py  gemini.py
distil/certify/: __init__.py  gate.py  holdout.py  stats.py  trajectory_risk.py
distil/codec/: __init__.py  features.py  keep_model.py  learned.py  train_transformer.py  transformer.py  weights.json
distil/compress/: __init__.py  adaptive.py  base.py  cache_aware.py  dedup.py  guideline.py  intent.py  keep_policy.py  salience.py  stabilize.py  strategies.py  structured.py  tier0.py  tier1.py
distil/integrations/: __init__.py  langchain.py  langgraph.py  litellm.py
distil/replay/: __init__.py  ablation.py  anthropic_runner.py  claude_cli_runner.py  expand_runner.py  openai_runner.py  prompts.py  realtrace.py  runner.py  smoke_runner.py
distil/transcripts/: __init__.py  base.py  claude_code.py
docs/: EVALUATION.md  GA_READINESS.md  PAPER.md  PAPER_PLAN.md  PUBLISHING.md  adapters.html  architecture.html  benchmark.html  cli.html  compare.html  concepts.html  corpus.html  deploy-security.html  faq.html  getting-started.html  index.html  integrations.html  leaderboard.html  learn-compression.html  learn-distil.html  learn-tokens.html  output.html  research.html  site.css  site.js  techniques.html  token-economics.html
docs/adr/: 0001-shadow-decision-signature-v2.md  0002-content-type-keep-policy.md
docs/paper/: .gitignore  README.md  main.tex  main_neurips.tex  neurips_2024.sty
docs/paper/results/: README.md  swe_bench_verified_e2e.json  swe_localization_e5_headtohead.json  swe_localization_e5_shuffled_headtohead.json  swe_localization_expand.json  swe_localization_full_expand.json  swe_localization_noexpand.json  swe_localization_sweep_shuffled.json  tau_airline_gpt4o_expand.json
docs/paper/results/swe_e2e/: preload_report.json  sample.json  sample_200.json  sample_500.json
docs/paper/results/swe_e2e_longhorizon/: skeleton_certificate.json  swe_bench_verified_longhorizon.json  trajectory_bound.json  trajectory_bound_inputs.json  trajectory_certificate.json
examples/: README.md  js_langchain.ts  js_vercel_ai_sdk.ts  python_anthropic.py  python_gemini.py  python_langgraph.py  python_litellm.py  python_openai.py
packaging/homebrew/: distil.rb
packaging/npx/: README.md  package.json
plugins/distil/: README.md  statusline.sh
plugins/distil/.claude-plugin/: plugin.json
plugins/distil/commands/: distil-badge.md  distil-certify.md  distil-dashboard.md  distil-doctor.md  distil-onboard.md  distil-shadow.md  distil-stats.md  distil.md
rust/distil-core/: Cargo.toml  README.md  build.rs
rust/distil-core/.cargo/: config.toml
rust/distil-core/benches/: bench.rs
rust/distil-core/src/: lib.rs
scripts/: build_pyz.sh  release.sh  soak-report.sh
specs/: query-aware-salience-phase2.md  query-aware-salience.md
tests/: conftest.py  test_adapter.py  test_adaptive.py  test_aproxy.py  test_aproxy_cov.py  test_astdelta.py  test_audit_fixes.py  test_benchmark.py  test_cache_aware.py  test_cachedelta.py  test_calibrate.py  test_certify.py  test_chaos.py  test_cli_async_flags.py  test_cli_certify.py  test_cli_onboard.py  test_cli_savings.py  test_codec.py  test_conformal.py  test_conformal_bounds.py  test_conformal_extra.py  test_corpus.py  test_cost_frontier.py  test_coverage_1150.py  test_coverage_1151.py  test_coverage_final.py  test_dedup.py  test_delta.py  test_dissect.py  test_doctor.py  test_drift.py  test_ensemble.py  test_eval.py  test_expand.py  test_expand_gate.py  test_ga_hardening.py  test_gate.py  test_gateway.py  test_gateway_cov.py  test_gateway_state.py  (+53 more)
(+61 files in other folders)
