[project]
# Import package and CLI are `distil`; the PyPI distribution is `distil-llm`
# (the bare `distil` name is already taken on PyPI).
name = "distil-llm"
version = "0.24.0"
description = "Compression with a quality contract — cache-aware, causally-pruned context compression for agentic runtimes, gated by a statistical non-inferiority test."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "shakes", email = "chandu1221@gmail.com" }]
keywords = ["llm", "context-compression", "prompt-caching", "agentic-runtime", "non-inferiority", "tokens", "cost"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = []  # core is stdlib-only by design: it must run anywhere, day one.

[project.urls]
Homepage = "https://github.com/dshakes/distil"
Repository = "https://github.com/dshakes/distil"
Issues = "https://github.com/dshakes/distil/issues"
Changelog = "https://github.com/dshakes/distil/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Production hardening swaps these in; the core does not require them.
#   - live: billing-grade tokenizer (count_tokens) + live AgentRunner, via the Anthropic SDK
dev = ["pytest>=8"]
live = ["anthropic>=0.40"]
onnx = ["onnxruntime>=1.17", "transformers>=4.40"]   # transformer keep-model inference
train = ["torch>=2.2", "transformers>=4.40", "onnx>=1.16", "onnxscript>=0.1", "sentencepiece>=0.2"]  # training + ONNX export
async = ["aiohttp>=3.9"]                              # async high-concurrency proxy (distil.aproxy)
# native = the Rust hot-path core (rust/distil-core); build with `maturin develop --release`

[project.scripts]
distil = "distil.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["distil"]

# Ship the trajectory corpus inside the wheel so `pip install distil && distil bench`
# is self-contained.
[tool.hatch.build.targets.wheel.force-include]
"corpus" = "distil/_corpus"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/test_aproxy.py" = ["E402"]  # imports follow pytest.importorskip("aiohttp")
