[project]
# Import package and CLI are `distil`; the PyPI distribution is `distil-llm`
# (the bare `distil` name is already taken on PyPI).
name = "distil-llm"
version = "1.6.1"
description = "Compression with a quality contract — cache-aware, causally-pruned context compression for agentic runtimes, gated by a statistical non-inferiority test."
readme = "README.md"
# Python floor is 3.9 — the version macOS still ships as the system `python3`. The
# package is stdlib-only and uses `from __future__ import annotations`, so it imports
# and the `distil bench` gate passes on 3.9/3.10/3.11/3.12/3.13 (verified in CI). A
# higher floor here is what made `pipx install distil-llm` fail with the misleading
# "Could not find a version ... (from versions: none)" on stock macOS Python.
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "shakes", email = "chandu1221@gmail.com" }]
keywords = ["llm", "context-compression", "prompt-caching", "agentic-runtime", "non-inferiority", "tokens", "cost"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = []  # core is stdlib-only by design: it must run anywhere, day one.

[project.urls]
Homepage = "https://github.com/dshakes/distil"
Repository = "https://github.com/dshakes/distil"
Issues = "https://github.com/dshakes/distil/issues"
Changelog = "https://github.com/dshakes/distil/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Production hardening swaps these in; the core does not require them.
#   - live: billing-grade tokenizer (count_tokens) + live AgentRunner, via the Anthropic SDK
dev = ["pytest>=8"]
live = ["anthropic>=0.40"]
onnx = ["onnxruntime>=1.17", "transformers>=4.40"]   # transformer keep-model inference
train = ["torch>=2.2", "transformers>=4.40", "onnx>=1.16", "onnxscript>=0.1", "sentencepiece>=0.2"]  # training + ONNX export
async = ["aiohttp>=3.9"]                              # async high-concurrency proxy (distil.aproxy)
# native = the Rust hot-path core (rust/distil-core); build with `maturin develop --release`

[project.scripts]
distil = "distil.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["distil"]

# Ship the trajectory corpus inside the wheel so `pip install distil && distil bench`
# is self-contained.
[tool.hatch.build.targets.wheel.force-include]
"corpus" = "distil/_corpus"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/test_aproxy.py" = ["E402"]  # imports follow pytest.importorskip("aiohttp")

[tool.pytest.ini_options]
# All tests live under tests/; keep collection out of the SWE-bench E7 harness's
# transient logs/ and image/worktree caches (which contain files named test_*.py).
testpaths = ["tests"]
norecursedirs = ["logs", ".e7_cache", ".venv*", "docs", "corpus", "benchmarks"]
