[package]
name = "distil-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "distil_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module"] }
# preserve_order: keep JSON object key order (BTreeMap sorts keys), so the Rust
# hot-path produces byte-identical minified output to the pure-Python backend.
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
